--- a/presse.html
+++ b/presse.html
@@ -50,7 +50,7 @@
                 <!-- Desktop Navigation -->
                 <div class="hidden lg:flex space-x-8 items-center">
                     <a href="index.html" class="nav-link text-xs uppercase tracking-wider text-text-dark hover:text-primary transition-colors duration-300 font-medium">Accueil</a>
-                    <a href="le-cabinet.html" class="nav-link active text-xs uppercase tracking-wider text-primary font-medium">Le Cabinet</a>
+                    <a href="le-cabinet.html" class="nav-link text-xs uppercase tracking-wider text-text-dark hover:text-primary transition-colors duration-300 font-medium">Le Cabinet</a>
 
                     <!-- Dropdown Domaines d'expertise -->
                     <div class="relative group">
