--- a/le-cabinet.html
+++ b/le-cabinet.html
@@ -10,7 +10,7 @@
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;600;700&family=Open+Sans:wght@400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Roboto+Condensed:wght@400;600;700&family=Open+Sans:wght@400;500;600&display=swap" rel="stylesheet">
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -25,6 +25,7 @@
                         'border-light': '#E5E7EB',
                     },
                     fontFamily: {
+                        'inter': ['"Inter"', 'sans-serif'],
                         'condensed': ['"Roboto Condensed"', 'sans-serif'],
                         'sans': ['"Open Sans"', 'sans-serif'],
                     },
@@ -34,7 +35,7 @@
     </script>
     <link rel="stylesheet" href="assets/css/input.css">
 </head>
-<body class="bg-white text-text-dark">
+<body class="bg-white text-text-dark font-inter">
 
     <!-- Header -->
     <header class="bg-white border-b border-border-light sticky top-0 z-50">
@@ -43,7 +44,7 @@
                 <!-- Logo/Brand -->
                 <div>
                     <a href="index.html">
-                        <img src="assets/images/GP_logo.avif" alt="Cabinet Georges Parastatis" class="h-12">
+                        <img src="assets/images/GP_logo.avif" alt="Cabinet Georges Parastatis" class="h-16">
                     </a>
                 </div>
 
@@ -134,9 +135,10 @@
                     </div>
                 </div>
                 <div class="flex justify-center">
-                    <div class="w-64 h-80 bg-gray-200 border border-border-light flex items-center justify-center">
-                        <p class="text-xs text-text-medium">Photo de Maître Parastatis</p>
+                    <div class="w-64 h-80 overflow-hidden">
+                        <img src="assets/images/photo_GP_noirblanc.avif" alt="Maître Georges Parastatis" class="w-full h-full object-cover object-top">
                     </div>
+                    
                 </div>
             </div>
         </div>
@@ -148,14 +150,14 @@
             <h2 class="font-condensed text-3xl font-semibold text-text-dark mb-10 text-center">Le Cabinet</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                 <div>
-                    <div class="bg-gray-200 border border-border-light aspect-video flex items-center justify-center mb-3">
-                        <p class="text-xs text-text-medium">Le bureau de réception</p>
+                    <div class="aspect-video overflow-hidden mb-3">
+                        <img src="assets/images/bureaureception2.avif" alt="Le bureau de réception" class="w-full h-full object-cover">
                     </div>
                     <p class="text-xs text-text-medium text-center">Le bureau de réception</p>
                 </div>
                 <div>
-                    <div class="bg-gray-200 border border-border-light aspect-video flex items-center justify-center mb-3">
-                        <p class="text-xs text-text-medium">La salle de réunion</p>
+                    <div class="aspect-video overflow-hidden mb-3">
+                        <img src="assets/images/sallereunion1.avif" alt="La salle de réunion" class="w-full h-full object-cover">
                     </div>
                     <p class="text-xs text-text-medium text-center">La salle de réunion</p>
                 </div>
