--- a/presse.html
+++ b/presse.html
@@ -10,7 +10,7 @@
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;600;700&family=Open+Sans:wght@400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Roboto+Condensed:wght@400;600;700&family=Open+Sans:wght@400;500;600&display=swap" rel="stylesheet">
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -25,6 +25,7 @@
                         'border-light': '#E5E7EB',
                     },
                     fontFamily: {
+                        'inter': ['"Inter"', 'sans-serif'],
                         'condensed': ['"Roboto Condensed"', 'sans-serif'],
                         'sans': ['"Open Sans"', 'sans-serif'],
                     },
@@ -34,7 +35,7 @@
     </script>
     <link rel="stylesheet" href="assets/css/input.css">
 </head>
-<body class="bg-white text-text-dark">
+<body class="bg-white text-text-dark font-inter">
 
     <!-- Header -->
     <header class="bg-white border-b border-border-light sticky top-0 z-50">
@@ -43,7 +44,7 @@
                 <!-- Logo/Brand -->
                 <div>
                     <a href="index.html">
-                        <img src="assets/images/GP_logo.avif" alt="Cabinet Georges Parastatis" class="h-12">
+                        <img src="assets/images/GP_logo.avif" alt="Cabinet Georges Parastatis" class="h-16">
                     </a>
                 </div>
 
@@ -67,7 +68,7 @@
                         </div>
                     </div>
 
-                    <a href="presse.html" class="nav-link text-xs uppercase tracking-wider text-text-dark hover:text-primary transition-colors duration-300 font-medium">Presse</a>
+                    <a href="presse.html" class="nav-link active text-xs uppercase tracking-wider text-primary font-medium">Presse</a>
                     <a href="contact.html" class="nav-link text-xs uppercase tracking-wider text-text-dark hover:text-primary transition-colors duration-300 font-medium">Contact</a>
                 </div>
 
@@ -82,7 +83,7 @@
             <!-- Mobile Menu -->
             <div id="mobile-menu" class="hidden lg:hidden mt-4 pb-4 space-y-3">
                 <a href="index.html" class="block text-xs uppercase tracking-wider text-text-dark hover:text-primary transition-colors font-medium">Accueil</a>
-                <a href="le-cabinet.html" class="block text-xs uppercase tracking-wider text-primary font-medium">Le Cabinet</a>
+                <a href="le-cabinet.html" class="block text-xs uppercase tracking-wider text-text-dark hover:text-primary transition-colors font-medium">Le Cabinet</a>
 
                 <!-- Mobile Dropdown -->
                 <div>
@@ -99,7 +100,7 @@
                     </div>
                 </div>
 
-                <a href="presse.html" class="block text-xs uppercase tracking-wider text-text-dark hover:text-primary transition-colors font-medium">Presse</a>
+                <a href="presse.html" class="block text-xs uppercase tracking-wider text-primary font-medium">Presse</a>
                 <a href="contact.html" class="block text-xs uppercase tracking-wider text-text-dark hover:text-primary transition-colors font-medium">Contact</a>
             </div>
         </nav>
