--- a/droit-international-famille.html
+++ b/droit-international-famille.html
@@ -19,8 +19,9 @@
             theme: {
                 extend: {
                     colors: {
-                        'inter': ['"Inter"', 'sans-serif'],
-                        'primary': '#8B0000',
+                        'primary': '#B91C1C',
+                        'primary-dark': '#991B1B',
+                        'navy': '#1e3a5f',
                         'text-dark': '#1F2937',
                         'text-medium': '#6B7280',
                         'border-light': '#E5E7EB',
