--- a/le-cabinet.html
+++ b/le-cabinet.html
@@ -19,7 +19,9 @@
             theme: {
                 extend: {
                     colors: {
-                        'primary': '#8B0000',
+                        'primary': '#B91C1C',
+                        'primary-dark': '#991B1B',
+                        'navy': '#1e3a5f',
                         'text-dark': '#1F2937',
                         'text-medium': '#6B7280',
                         'border-light': '#E5E7EB',
@@ -151,9 +153,9 @@
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                 <div>
                     <div class="aspect-video overflow-hidden mb-3">
-                        <img src="assets/images/bureaureception2.avif" alt="Le bureau de réception" class="w-full h-full object-cover">
+                        <img src="assets/images/bureaureception3.avif" alt="Le bureau" class="w-full h-full object-cover">
                     </div>
-                    <p class="text-xs text-text-medium text-center">Le bureau de réception</p>
+                    <p class="text-xs text-text-medium text-center">Le bureau</p>
                 </div>
                 <div>
                     <div class="aspect-video overflow-hidden mb-3">
